k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-postnummer
  labels:
    istio-injection: enabled
