k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postnummer
  namespace: app-postnummer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postnummer
  template:
    metadata:
      labels:
        app: postnummer
    spec:
      containers:
        - name: webapp
          image: harbor.az.softis.net/shp-api-postnummer/webapp:latest
          imagePullPolicy: Always
      imagePullSecrets:
        - name: harbor-robot-postnummer
