k8s/backend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: postnummer-api
  namespace: app-postnummer
spec:
  hosts:
    - postnummer-api.az.softis.net
  gateways:
    - istio-system/main-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: postnummer-api-entrypoint
