k8s/frontend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: postnummer
  namespace: app-postnummer
spec:
  hosts:
    - postnummer.az.softis.net
  gateways:
    - istio-system/main-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: postnummer-entrypoint
